Tweak collection layout

--- a/PublicArt/Base.lproj/Main.storyboard
+++ b/PublicArt/Base.lproj/Main.storyboard
@@ -758,27 +758,28 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <mapView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" mapType="standard" translatesAutoresizingMaskIntoConstraints="NO" id="tD7-2K-zCc">
-                                <rect key="frame" x="0.0" y="0.0" width="375" height="510"/>
+                                <rect key="frame" x="0.0" y="0.0" width="375" height="554"/>
                             </mapView>
                             <toolbar opaque="NO" clearsContextBeforeDrawing="NO" contentMode="scaleToFill" translucent="NO" translatesAutoresizingMaskIntoConstraints="NO" id="rrd-7g-TBC">
-                                <rect key="frame" x="0.0" y="510" width="375" height="44"/>
+                                <rect key="frame" x="0.0" y="0.0" width="375" height="44"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="44" id="wqG-Nb-YlQ"/>
                                 </constraints>
                                 <items>
                                     <barButtonItem title="Item" id="BOj-xw-Fv8"/>
                                 </items>
+                                <color key="barTintColor" white="0.0" alpha="1" colorSpace="calibratedWhite"/>
                             </toolbar>
                         </subviews>
                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <constraints>
-                            <constraint firstItem="rrd-7g-TBC" firstAttribute="top" secondItem="tD7-2K-zCc" secondAttribute="bottom" id="0dO-La-QpR"/>
-                            <constraint firstItem="2x2-6b-HcW" firstAttribute="top" secondItem="rrd-7g-TBC" secondAttribute="bottom" id="8aL-gp-bff"/>
+                            <constraint firstItem="2x2-6b-HcW" firstAttribute="top" secondItem="tD7-2K-zCc" secondAttribute="bottom" id="ATR-oN-hny"/>
                             <constraint firstAttribute="trailing" secondItem="rrd-7g-TBC" secondAttribute="trailing" id="Bbz-Q2-o2a"/>
                             <constraint firstAttribute="trailing" secondItem="tD7-2K-zCc" secondAttribute="trailing" id="JSN-gc-iGa"/>
                             <constraint firstItem="rrd-7g-TBC" firstAttribute="leading" secondItem="sEb-pJ-iWL" secondAttribute="leading" id="Uc4-rD-g8Y"/>
                             <constraint firstItem="tD7-2K-zCc" firstAttribute="leading" secondItem="sEb-pJ-iWL" secondAttribute="leading" id="g5n-4y-YZW"/>
                             <constraint firstItem="tD7-2K-zCc" firstAttribute="top" secondItem="dBv-tS-TNt" secondAttribute="bottom" id="gCN-3T-Mrj"/>
+                            <constraint firstItem="rrd-7g-TBC" firstAttribute="top" secondItem="dBv-tS-TNt" secondAttribute="bottom" id="y5j-LT-o7L"/>
                         </constraints>
                     </view>
                     <navigationItem key="navigationItem" id="wtT-cv-V9i"/>
@@ -789,7 +790,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="rPS-Ee-MUG" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="2281" y="1132"/>
+            <point key="canvasLocation" x="2280.8000000000002" y="1131.1844077961021"/>
         </scene>
         <!--Web View Controller-->
         <scene sceneID="2tt-bj-sdY">
